--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
                   </div>
                 </div>
               </div>
-              <!-- /.card-header -->
+              <!-- /.card-header -->a
               <div class="card-body table-responsive p-0" style="height: 300px;">
                 <table class="table table-head-fixed text-nowrap">
                   <thead>
