atualização dos podios

--- a/templates/indexmeu.html
+++ b/templates/indexmeu.html
@@ -11,7 +11,7 @@
       <div class="content">
         <div class="container">
 
-        <h3 class="mt-4 mb-4">Pódio parcial</h3>
+        <h3 class="mt-4 mb-4">Pódio parcial [Aprendiz/Instrutor]</h3>
 
         <div class="row">
             <div class="col-md-4" style="margin-top:1em;">
@@ -112,6 +112,169 @@
                       </li>
                       <li class="nav-item">
                         <span class="nav-link">Pontos <span class="float-right badge bg-danger">{{podio[2].Pontos}}</span></span>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <!-- /.widget-user -->
+              </div>
+              <!-- /.col -->
+        </div>
+        <!-- /.row -->
+
+
+        <h3 class="mt-4 mb-4">Pódio Gratificações</h3>
+
+        <div class="row">
+            <div class="col-md-4" style="margin-top:1em;">
+                <!-- Widget: user widget style 2 -->
+                <div class="card card-widget widget-user-2">
+                  <!-- Add the bg color to the header using any of the bg-* classes -->
+                  <div class="widget-user-header bg-gray rounded">
+                    <div class="widget-user-image">
+                      <img class="" src="https://www.habbo.com.br/habbo-imaging/avatarimage?img_format=png&user={{podio[21].Nick}}&direction=2&head_direction=3&size=l&action=std" alt="User Avatar">
+                    </div>
+                    <!-- /.widget-user-image -->
+                    <h3 class="widget-user-username">{{podio[21].Nick}}</h3>
+                    <h5 class="widget-user-desc">2° colocado <span class="float-right badge bg-light">{{ podio[21].Pontos }} Pontos</span></h5>
+                  </div>
+                </div>
+                <!-- /.widget-user -->
+              </div>
+              <!-- /.col -->
+              <div class="col-md-4">
+                <!-- Widget: user widget style 2 -->
+                <div class="card card-widget widget-user-2">
+                  <!-- Add the bg color to the header using any of the bg-* classes -->
+                  <div class="widget-user-header bg-warning rounded">
+                    <div class="widget-user-image">
+                      <img class="" src="https://www.habbo.com.br/habbo-imaging/avatarimage?img_format=png&user={{podio[20].Nick}}&direction=2&head_direction=3&size=l&action=std" alt="User Avatar">
+                    </div>
+                    <!-- /.widget-user-image -->
+                    <h3 class="widget-user-username">{{podio[20].Nick}}</h3>
+                    <h5 class="widget-user-desc">1° colocado <span class="float-right badge bg-light">{{ podio[21].Pontos }} Pontos</span></h5>
+                  </div>
+                </div>
+                <!-- /.widget-user -->
+              </div>
+              <!-- /.col -->
+              <div class="col-md-4" style="margin-top:1em;">
+                <!-- Widget: user widget style 2 -->
+                <div class="card card-widget widget-user-2">
+                  <!-- Add the bg color to the header using any of the bg-* classes -->
+                  <div class="widget-user-header bg-orange rounded">
+                    <div class="widget-user-image">
+                      <img class="" src="https://www.habbo.com.br/habbo-imaging/avatarimage?img_format=png&user={{podio[22].Nick}}&direction=2&head_direction=3&size=l&action=std" alt="User Avatar">
+                    </div>
+                    <!-- /.widget-user-image -->
+                    <h3 class="widget-user-username">{{podio[22].Nick}}</h3>
+                    <h5 class="widget-user-desc">3° colocado <span class="float-right badge bg-light">{{ podio[22].Pontos }} Pontos</span></h5>
+                  </div>
+                </div>
+                <!-- /.widget-user -->
+              </div>
+              <!-- /.col -->
+        </div>
+        <!-- /.row -->
+
+
+        <h3 class="mt-4 mb-4">Pódio parcial [Graduador/Avaliador/Capacitador/Aplicadores]</h3>
+        <div class="row">
+            <div class="col-md-3">
+                <!-- Widget: user widget style 2 -->
+                <div class="card card-widget widget-user-2">
+                  <!-- Add the bg color to the header using any of the bg-* classes -->
+                  <div class="widget-user-header bg-info">
+                    <div class="widget-user-image">
+                      <img class="" src="https://www.habbo.com.br/habbo-imaging/avatarimage?img_format=png&user={{podio[4].Nick}}&direction=2&head_direction=3&size=l&action=std" alt="User Avatar">
+                    </div>
+                    <!-- /.widget-user-image -->
+                    <h3 class="widget-user-username">{{podio[4].Nick}}</h3>
+                    <h5 class="widget-user-desc">Graduador(a)</h5>
+                  </div>
+                  <div class="card-footer p-0">
+                    <ul class="nav flex-column">
+                      <li class="nav-item">
+                          <span class="nav-link">CFI <span class="float-right badge bg-primary">{{podio[4].CFSd}}</span></span>
+                      </li>
+                      <li class="nav-item">
+                        <span class="nav-link">Acompanhamento <span class="float-right badge bg-info">{{podio[4].CFC1}}</span></span>
+                      </li>
+                      <li class="nav-item">
+                        <span class="nav-link">Pontos <span class="float-right badge bg-danger">{{podio[4].Pontos}}</span></span>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <!-- /.widget-user -->
+              </div>
+              <!-- /.col -->
+              <div class="col-md-3">
+                <!-- Widget: user widget style 2 -->
+                <div class="card card-widget widget-user-2">
+                  <!-- Add the bg color to the header using any of the bg-* classes -->
+                  <div class="widget-user-header bg-lightblue">
+                    <div class="widget-user-image">
+                      <img class="" src="https://www.habbo.com.br/habbo-imaging/avatarimage?img_format=png&user={{podio[8].Nick}}&direction=2&head_direction=3&size=l&action=std" alt="User Avatar">
+                    </div>
+                    <!-- /.widget-user-image -->
+                    <h3 class="widget-user-username">{{podio[8].Nick}}</h3>
+                    <h5 class="widget-user-desc">Avaliador(a)</h5>
+                  </div>
+                  <div class="card-footer p-0">
+                    <ul class="nav flex-column">
+                      <li class="nav-item">
+                          <span class="nav-link">Avaliação <span class="float-right badge bg-primary">{{podio[8].CFSd}}</span></span>
+                      </li>
+                      <li class="nav-item">
+                        <span class="nav-link">Pontos <span class="float-right badge bg-danger">{{podio[8].Pontos}}</span></span>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <!-- /.widget-user -->
+              </div>
+              <!-- /.col -->
+              <div class="col-md-3">
+                <!-- Widget: user widget style 2 -->
+                <div class="card card-widget widget-user-2">
+                  <!-- Add the bg color to the header using any of the bg-* classes -->
+                  <div class="widget-user-header bg-primary">
+                    <div class="widget-user-image">
+                      <img class="" src="https://www.habbo.com.br/habbo-imaging/avatarimage?img_format=png&user={{podio[12].Nick}}&direction=2&head_direction=3&size=l&action=std" alt="User Avatar">
+                    </div>
+                    <!-- /.widget-user-image -->
+                    <h3 class="widget-user-username">{{podio[12].Nick}}</h3>
+                    <h5 class="widget-user-desc">Capacitador(a)</h5>
+                  </div>
+                  <div class="card-footer p-0">
+                    <ul class="nav flex-column">
+                      <li class="nav-item">
+                        <span class="nav-link">Capacitação <span class="float-right badge bg-danger">{{podio[12].Pontos}}</span></span>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <!-- /.widget-user -->
+              </div>
+              <!-- /.col -->
+          <!-- /.col -->
+              <div class="col-md-3">
+                <!-- Widget: user widget style 2 -->
+                <div class="card card-widget widget-user-2">
+                  <!-- Add the bg color to the header using any of the bg-* classes -->
+                  <div class="widget-user-header bg-fuchsia">
+                    <div class="widget-user-image">
+                      <img class="" src="https://www.habbo.com.br/habbo-imaging/avatarimage?img_format=png&user={{podio[16].Nick}}&direction=2&head_direction=3&size=l&action=std" alt="User Avatar">
+                    </div>
+                    <!-- /.widget-user-image -->
+                    <h3 class="widget-user-username">{{podio[16].Nick}}</h3>
+                    <h5 class="widget-user-desc">Aplicador(a) [DA]</h5>
+                  </div>
+                  <div class="card-footer p-0">
+                    <ul class="nav flex-column">
+                      <li class="nav-item">
+                        <span class="nav-link">Teste <span class="float-right badge bg-danger">{{podio[16].Pontos}}</span></span>
                       </li>
                     </ul>
                   </div>
