--- a/templates/docs.html
+++ b/templates/docs.html
@@ -17,7 +17,7 @@
             <h3 class="mt-4 mb-4">Documentos</h3>
             <div class="row">
                 <div class="col-md-12">
-                    <div class="card card-outline card-success collapsed-card">
+                    <div class="card card-success collapsed-card">
                         <div class="card-header">
                           <h3 class="card-title">{{ regimento.Title }} - <small><b>última atualização:</b> {{moment.locale('pt-br')}} {{moment(regimento.Atualização).format('LLL')}}</small></h3>
 
@@ -33,7 +33,7 @@
                         </div>
                         <!-- /.card-body -->
                       </div>
-                      <div class="card card-outline card-danger collapsed-card">
+                      <div class="card card-danger collapsed-card">
                         <div class="card-header">
                           <h3 class="card-title">{{ penal.Title }} - <small><b>última atualização:</b> {{moment.locale('pt-br')}} {{moment(penal.Atualização).format('LLL')}}</small></h3>
 
