--- a/templates/projetos.html
+++ b/templates/projetos.html
@@ -18,7 +18,7 @@
   <section class="content-wrapper">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-12">
+          <div class="col-12 mt-2">
                 <table id="example2" class="table table-striped table-hover">
                   <thead>
                   <tr>
