--- a/templates/indexmeu.html
+++ b/templates/indexmeu.html
@@ -11,7 +11,7 @@
       <div class="content">
         <div class="container">
 
-        <h3 class="mt-4 mb-4">Pódio parcial [Aprendiz/Instrutor]</h3>
+        <h3 class="mt-4 mb-4 text-center">Pódio parcial [Aprendiz/Instrutor]</h3>
 
         <div class="row">
             <div class="col-md-4" style="margin-top:1em;">
@@ -123,7 +123,7 @@
         <!-- /.row -->
 
 
-        <h3 class="mt-4 mb-4">Pódio Gratificações</h3>
+        <h3 class="mt-4 mb-4 text-center">Pódio Gratificações</h3>
 
         <div class="row">
             <div class="col-md-4" style="margin-top:1em;">
@@ -178,7 +178,7 @@
         <!-- /.row -->
 
 
-        <h3 class="mt-4 mb-4">Pódio parcial [Graduador/Avaliador/Capacitador/Aplicadores]</h3>
+        <h3 class="mt-4 mb-4 text-center">Pódio parcial Grad + </h3>
         <div class="row">
             <div class="col-md-3">
                 <!-- Widget: user widget style 2 -->
