--- a/templates/projetos.html
+++ b/templates/projetos.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Documentos - {% endblock %}</h1>
+  <h1>{% block title %}Anúncios - {% endblock %}</h1>
 {% block script %}
     {{ super() }}
     {{ moment.include_moment() }}
