Lista de Membros

--- a/templates/base.html
+++ b/templates/base.html
@@ -75,6 +75,9 @@
             <li class="nav-item">
               <a href="/projetos" class="nav-link">Projetos & Sugestões</a>
             </li>
+            <li class="nav-item">
+              <a href="/membros" class="nav-link">Lista de Membros</a>
+            </li>
           </ul>
           <form method="get" action="/instrutor" class="float-right form-inline ml-0 ml-md-3">
             <div class="input-group input-group-sm">
