--- a/templates/membros.html
+++ b/templates/membros.html
@@ -28,7 +28,7 @@
               {% endif %}
 
               <div class="col-md-3 col-sm-6 col-12">
-                <a href="/instrutor?policial=WictorP2">
+                <a href="/instrutor?policial={{ lista[cargo][membro].Nick}}">
                   <div class="info-box {{classe}}">
                     <span class="info-box-icon"><img alt="{{ lista[cargo][membro].Nick }}" class="table-avatar" style="height: 8.5rem;object-fit: none;object-position: center center;padding: 0.1rem!important;width: 3.5rem;" src="https://www.habbo.com.br/habbo-imaging/avatarimage?img_format=png&amp;user={{ lista[cargo][membro].Nick }}&amp;direction=2&amp;head_direction=3&amp;size=m&amp;action=std"></span>
 
