--- a/templates/base.html
+++ b/templates/base.html
@@ -106,7 +106,7 @@
 
       <!-- Main Footer -->
       <footer class="main-footer">
-        <strong>Copyright &copy; 2023-2023 <a href="https://adminlte.io">Companhia dos Instrutores</a>.</strong>
+        <strong>Copyright &copy; 2023-2023 <a href="https://inssystem.herokuapp.com">Companhia dos Instrutores</a>.</strong>
         Todos os direitos reservados
         <div class="float-right d-none d-sm-inline-block">
           <b>Versão</b> 0.1
