--- a/templates/membros.html
+++ b/templates/membros.html
@@ -40,7 +40,7 @@
                         <div class="progress-bar" style="width: 100%"></div>
                       </div>
                       <span class="progress-description">
-                        <small>{{ moment.locale('pt-br') }} {{ moment(lista[cargo][membro].Entrada).format('DD MMM YYYY') }} {{promocao}}</small>
+                        <small>{{ moment.locale('pt-br') }} {{ moment(lista[cargo][membro].Entrada).day(+1).format('DD MMM YYYY') }} {{promocao}}</small>
                       </span>
                       <span class="">
                         <span class="badge bg-light">{{lista[cargo][membro].SubGrupos}}</span>
