--- a/templates/membros.html
+++ b/templates/membros.html
@@ -10,6 +10,32 @@
     <section class="content-wrapper">
       <div class="content">
         <div class="container">
+
+
+          <div class="card card-default mt-1">
+              <div class="card-header">
+                <h3 class="card-title">
+                  <i class="fas fa-bullhorn"></i>
+                  Legenda
+                </h3>
+              </div>
+              <!-- /.card-header -->
+              <div class="card-body">
+                <div class="callout callout-success">
+                  <h5>Membro ativo.</h5>
+                </div>
+                <div class="callout callout-info">
+                  <h5>Retorno de licença recente.</h5>
+                </div>
+                <div class="callout callout-warning">
+                  <h5>Em licença.</h5>
+                </div>
+                <div class="callout">
+                  <h5>Membro com menos de 7 dias de companhia.</h5>
+                </div>
+              </div>
+              <!-- /.card-body -->
+            </div>
           {% for cargo in lista %}
             <h3 class="mt-4 mb-4">{{cargo}}</h3>
             <div class="row">
@@ -20,7 +46,7 @@
                 {% set promocao = " " %}
               {% endif %}
               {% if lista[cargo][membro].Situação == "[A]" %}
-                {% set classe = 'bg-gradient-primary' %}
+                {% set classe = 'bg-gradient-success' %}
               {% elif lista[cargo][membro].Situação == "[L]" %}
                 {% set classe = 'bg-gradient-warning' %}
               {% elif lista[cargo][membro].Situação == "[LR]" %}
