--- a/templates/policia.html
+++ b/templates/policia.html
@@ -1,7 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'login/base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Documentos - {% endblock %}</h1>
+  <h1>{% block title %}Politica de Privacidade - {% endblock %}</h1>
 {% block script %}
     {{ super() }}
     {{ moment.include_moment() }}
