--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,9 @@
   <link rel="shortcut icon" href="https://www.habbo.com.br/habbo-imaging/badge/b09064s43131s50134s17113s171153f3edc7f555be912c2392e285b05bd34.gif" type="image/x-icon" />
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Georama:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="{{ url_for('static', filename='plugins/fontawesome-free/css/all.min.css')}}">
   <!-- overlayScrollbars -->
@@ -42,6 +45,8 @@
     </style>
   <!-- jQuery -->
   {{ moment.include_moment() }}
+  <script src="https://momentjs.com/downloads/moment-timezone-with-data.min.js"></script>
+  <script>moment.tz('America/Sao_Paulo');</script>
 </head>
 <body class="dark-mode layout-top-nav">
 <div class="wrapper">
@@ -78,6 +83,36 @@
             <li class="nav-item">
               <a href="/membros" class="nav-link">Lista de Membros</a>
             </li>
+            {% if session['membro'] == True %}
+              <li class="nav-item dropdown">
+              <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">Aulas</a>
+              <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow">
+
+                <li class="dropdown-submenu dropdown-hover">
+                  <a id="dropdownSubMenu2" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-item dropdown-toggle">Instrutor</a>
+
+                  <ul aria-labelledby="dropdownSubMenu2" class="dropdown-menu border-0 shadow">
+                    <li>
+                      <a tabindex="-1" href="scripts" class="dropdown-item">Scripts</a>
+                    </li>
+
+                    <li class="dropdown-submenu">
+                      <a id="dropdownSubMenu3" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-item dropdown-toggle">Formulários</a>
+                      <ul aria-labelledby="dropdownSubMenu3" class="dropdown-menu border-0 shadow">
+                        <li><a href="https://iformv2.vercel.app/?username={{ session['nick'] }}&lesson=cfsd" target="_blank" class="dropdown-item">CFSd</a></li>
+                        <li><a href="https://iformv2.vercel.app/?username={{ session['nick'] }}&lesson=cfci" target="_blank" class="dropdown-item">CFC1</a></li>
+                        <li><a href="https://iformv2.vercel.app/?username={{ session['nick'] }}&lesson=cfcii" target="_blank" class="dropdown-item">CFC2</a></li>
+                        <li><a href="https://iformv2.vercel.app/?username={{ session['nick'] }}&lesson=cap" target="_blank" class="dropdown-item">CAP</a></li>
+                      </ul>
+                    </li>
+                  </ul>
+
+                </li>
+
+
+              </ul>
+            </li>
+            {% endif %}
           </ul>
           <form method="get" action="/instrutor" class="float-right form-inline ml-0 ml-md-3">
             <div class="input-group input-group-sm">
@@ -106,7 +141,7 @@
 
       <!-- Main Footer -->
       <footer class="main-footer">
-        <strong>Copyright &copy; 2023-2023 <a href="https://inssystem.herokuapp.com">Companhia dos Instrutores</a>.</strong>
+        <strong>Copyright &copy; 2023-2023 <a href="https://adminlte.io">Companhia dos Instrutores</a>.</strong>
         Todos os direitos reservados
         <div class="float-right d-none d-sm-inline-block">
           <b>Versão</b> 0.1
@@ -135,6 +170,8 @@
     <script src="{{ url_for('static', filename='plugins/jqvmap/maps/jquery.vmap.usa.js')}}"></script>
     <!-- jQuery Knob Chart -->
     <script src="{{ url_for('static', filename='plugins/jquery-knob/jquery.knob.min.js')}}"></script>
+  <!-- ChartJS -->
+<script src="{{ url_for('static', filename='plugins/chart.js/Chart.min.js')}}"></script>
     <!-- daterangepicker -->
     <script src="{{ url_for('static', filename='plugins/daterangepicker/daterangepicker.js')}}"></script>
     <!-- Tempusdominus Bootstrap 4 -->
