--- a/templates/base.html
+++ b/templates/base.html
@@ -113,7 +113,11 @@
               </ul>
             </li>
             {% endif %}
+            <li class="nav-item">
+              <a href="/logout" class="bg-danger rounded nav-link">Sair</a>
+            </li>
           </ul>
+
           <form method="get" action="/instrutor" class="float-right form-inline ml-0 ml-md-3">
             <div class="input-group input-group-sm">
               <input class="form-control form-control-navbar" name="policial" type="text" placeholder="Nick do Instrutor" aria-label="Nick do Instrutor">
