--- a/templates/base.html
+++ b/templates/base.html
@@ -93,7 +93,7 @@
 
                   <ul aria-labelledby="dropdownSubMenu2" class="dropdown-menu border-0 shadow">
                     <li>
-                      <a tabindex="-1" href="scripts" class="dropdown-item">Scripts</a>
+                      <a tabindex="-1" href="/scripts" class="dropdown-item">Scripts</a>
                     </li>
 
                     <li class="dropdown-submenu">
@@ -104,6 +104,9 @@
                         <li><a href="https://iformv2.vercel.app/?username={{ session['nick'] }}&lesson=cfcii" target="_blank" class="dropdown-item">CFC2</a></li>
                         <li><a href="https://iformv2.vercel.app/?username={{ session['nick'] }}&lesson=cap" target="_blank" class="dropdown-item">CAP</a></li>
                       </ul>
+                    </li>
+                    <li>
+                      <a tabindex="-1" href="/relatorios/instrutor" class="dropdown-item">Relatórios</a>
                     </li>
                   </ul>
 
