--- a/templates/relatorios/instrutor.html
+++ b/templates/relatorios/instrutor.html
@@ -39,12 +39,14 @@
                       <td class="dtr-control">{{ relatorio.Início }}</td>
                       <td>{{ relatorio.AulaAbreviada }}</td>
                       <td class="text-center">
-                        <ul class="list-inline">
+                        <a href="https://inssystem.herokuapp.com/instrutor?policial={{relatorio.Instrutor}}">
+                          <ul class="list-inline">
                               <li class="list-inline-item text-center">
                                   <img alt="Avatar" class="table-avatar bg-info" style="height: 2.5rem;object-fit: none;object-position: center -30px;    padding: 0.1rem!important;" src="https://www.habbo.com.br/habbo-imaging/avatarimage?img_format=png&user={{ relatorio.Instrutor}}&direction=2&head_direction=3&size=m&action=std"></br>
                                 {{ relatorio.Instrutor }}
                               </li>
                           </ul>
+                        </a>
                       </td>
                       <td>{{ relatorio.Presentes }}</td>
                       <td>{{ relatorio.Aprovados }}</td>
