--- a/templates/parciais/instrutor.html
+++ b/templates/parciais/instrutor.html
@@ -28,7 +28,6 @@
                     <th>CFSd</th>
                     <th>CFC1</th>
                     <th>CFC2</th>
-                    <th>CAP</th>
                     <th>Pontos</th>
                     <th>Situação</th>
                   </tr>
@@ -61,7 +60,6 @@
                       <td class="dtr-control">{{ parcial.CFSd }}</td>
                       <td>{{ parcial.CFC1 }}</td>
                       <td>{{ parcial.CFC2 }}</td>
-                      <td>{{ parcial.CAP }}</td>
                       <td>{{ parcial.Pontos }}</td>
                       <td><span class="badge {{classe}}">{{ parcial.Caso }}</span></td>
                     </tr>
@@ -74,7 +72,6 @@
                     <th>CFSd</th>
                     <th>CFC1</th>
                     <th>CFC2</th>
-                    <th>CAP</th>
                     <th>Pontos</th>
                     <th>Situação</th>
                   </tr>
@@ -122,12 +119,12 @@
     function format (name) {
     console.log(name);
     return `<ul class="sliderprojet nav flex-column">\
-                  <li class="nav-item"><b>Data e hora:</b> ${name[1]}</li>\
-                  <li class="nav-item"><b>Curso:</b> ${name[2]}</li>\
-                  <li class="nav-item"><b>Instrutor:</b> ${name[3]}</li>\
-                  <li class="nav-item"><b>Presentes:</b> ${name[4]}</li>\
-                  <li class="nav-item"><b>Aprovados:</b> ${name[5]}</li>\
-                  <li class="nav-item"><b>Comentário:</b> ${name[6]}</li>\
+                  <li class="nav-item"><b>Instrutor:</b> ${name[1]}</li>\
+                  <li class="nav-item"><b>CFSd:</b> ${name[2]}</li>\
+                  <li class="nav-item"><b>CFC1:</b> ${name[3]}</li>\
+                  <li class="nav-item"><b>CFC2:</b> ${name[4]}</li>\
+                  <li class="nav-item"><b>Pontos:</b> ${name[6]}</li>\
+                  <li class="nav-item"><b>Situação:</b> ${name[7]}</li>\
                 </ul>`;
 }
         $('#example2 tbody').on('click', 'td.dt-control', function () {
