--- a/templates/membros.html
+++ b/templates/membros.html
@@ -82,7 +82,39 @@
             {% endfor %}
              </div>
           {% endfor %}
-
+          <div class="row">
+          {% for departamento in departamentos %}
+            <div class="col-md-3">
+              <div class="card card-outline card-primary">
+                <div class="card-header">
+                  <h3 class="card-title"><small>{{departamento}}</small></h3>
+                </div>
+                <div class="card-body p-0">
+                                  <table id="example2" class="table table-striped table-hover projects">
+                  <thead>
+                  <tbody>
+                    {% for membro in departamentos[departamento] %}
+                      <tr>
+                      <td class="text-center">
+                        <a class="text-white" href="https://inssystem.herokuapp.com/instrutor?policial={{ departamentos[departamento][membro].Nick }}">
+                          <ul class="list-inline">
+                              <li class="list-inline-item text-center">
+                                  <img alt="Avatar" class="table-avatar bg-info" style="height: 2.5rem;object-fit: none;object-position: center -30px;    padding: 0.1rem!important;" src="https://www.habbo.com.br/habbo-imaging/avatarimage?img_format=png&user={{ departamentos[departamento][membro].Nick }}&direction=2&head_direction=3&size=m&action=std"></br>
+                                {{ departamentos[departamento][membro].Nick }}
+                              </li>
+                          </ul>
+                        </a>
+                      </td>
+                      <td>{{ departamentos[departamento][membro].Cargo }}</td>
+                    </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+                </div>
+              </div>
+            </div>
+          {% endfor %}
+            </div>
       </div><!--/. container-fluid -->
     </section>
 
